2008-10-19  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Rewrote the parser to use libxml2.  Changed to create
	menu from the feed.
	* main.c (create_feed_menu): Constructs the feed menu from the
	feed XML at the program startup.

2008-10-18  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Initial implementation of RSS feed parser.

2008-10-17  Henri Häkkinen  <henux@users.sourceforge.net>

	* main.c: Initial implementations of the system tray and
	application menu functionality.