@@ -2,11 +2,16 @@ gtk-feed README
 
 Copyright (C) 2008 Henri Häkkinen
 
-gtk-feed is intended to become a lightweight GTK+ 2.0 RSS/Atom feed reader.
-It works only as a icon on the window manager's system tray and provides
-feeds through a popup menu.
+gtk-feed is a lightweight and minimal GTK+ 2.0 RSS feed reader.  It works
+only as an icon on the window manager's system tray and provides feeds
+through a popup menu.
 
-The application is very early on it's development and does not yet actually
-provide any feed reading capability at all.
+The application is very early on it's development cycle and is not yet
+ready for general use.  A rudimentary support for RSS feeds is implemented
+but the application needs much more attention before it can be considered
+usable.
 
-The feed icon image file is taken from http://feedicons.com.
+Thanks for Jani Mettovaara for giving me the idea for this project.
+
+The feed icon image is taken from http://feedicons.com and it is released
+as "public domain".
